# IBM-AI-Engineering-Professional

./: .gitignore  pyproject.toml
01. Machine Learning with Python/Module 02/: ML0101EN-Reg-Mulitple-Linear-Regression-Co2.ipynb  ML0101EN-Reg-Simple-Linear-Regression-Co2.ipynb
01. Machine Learning with Python/Module 03/: ML0101EN-Clas-Decision-Trees-drug.ipynb  ML0101EN-Clas-K-Nearest-neighbors-CustCat.ipynb  Regression_Trees.ipynb  Regression_Trees_SnapML.ipynb  classification_tree_svm.ipynb
01. Machine Learning with Python/Module 04/: ML0101EN-Clas-Logistic-Reg-churn.ipynb  ML0101EN-Clas-SVM-cancer.ipynb  Multi-class_Classification.ipynb
01. Machine Learning with Python/Module 05/: ML0101EN-Clus-K-Means-Customer-Seg.ipynb
01. Machine Learning with Python/Module 06/: ML0101EN_SkillUp_FinalAssignment.ipynb
02. Introduction to Deep Learning & Neural Networks with Keras/Module 01/: DL0101EN-1-1-Forward-Propgation-py-v1 0__1__.ipynb
02. Introduction to Deep Learning & Neural Networks with Keras/Module 03/: DL0101EN-3-1-Regression-with-Keras-py-v1 0__2_.ipynb  DL0101EN-3-2-Classification-with-Keras-py-v1 0__1_.ipynb
02. Introduction to Deep Learning & Neural Networks with Keras/Module 04/: DL0101EN-4-1-Convolutional-Neural-Networks-with-Keras-py-v1 0__1_.ipynb
02. Introduction to Deep Learning & Neural Networks with Keras/Module 05/: FinalAssignment.ipynb
03. Deep Learning with Keras and Tensorflow/Module 01/: M01L01_Lab_ Implementing the Functional API in Keras.ipynb  M01L02_Lab_Creating_Custom_Layers_and_Models.ipynb
03. Deep Learning with Keras and Tensorflow/Module 02/: Lab_Practical Application of Transpose Convolution.ipynb  M02L02_Lab_Transfer_Learning_Implementation.ipynb  M2L1_Lab_ Advanced Data Augmentation with Keras.ipynb  Tips for Transfer Learning Implementation.md
03. Deep Learning with Keras and Tensorflow/Module 03/: M03L02_Lab_Implementing Transformers for Text Genera.ipynb  REVIEW-Lab_Building Advanced Transformers.ipynb
03. Deep Learning with Keras and Tensorflow/Module 04/: M04L01_Lab_Building Autoencoders.ipynb  M04L02_Lab_Develop GANs using Keras.ipynb  M04_Lab_Implementing_Diffusion_Models.ipynb
03. Deep Learning with Keras and Tensorflow/Module 05/: M05L01_Lab_Custom Training Loops in Keras.ipynb  M05L02_Lab_Hyperparameter Tuning with Keras Tuner.ipynb
03. Deep Learning with Keras and Tensorflow/Module 06/: M06L01_Lab_Building a Deep Q-Network with Keras.ipynb  M06L01_Lab_Implementing Q-Learning in Keras.ipynb
03. Deep Learning with Keras and Tensorflow/Module 07/: Final Proj-Classify Waste Products Using TL FT.ipynb  Practice Project Fruit Classification Using TF.ipynb
04. Introduction to Neural Networks and PyTorch/Module 01/: 1 1_1Dtensors_v2.ipynb  1 1_2_Two-Dimensional_Tensors_v2.ipynb  1 2derivativesandGraphsinPytorch_v2.ipynb  1 3 1_simple_data_set_v2.ipynb  1 3 2_Datasets_and_transforms.ipynb  1 3 3_pre-Built Datasets_and_transforms_v2.ipynb
04. Introduction to Neural Networks and PyTorch/Module 02/: 2 1Prediction1Dregression_v3.ipynb  2 2_linear_regression_one_parameter_v3.ipynb  2 3_training_slope_and_bias_v3.ipynb
04. Introduction to Neural Networks and PyTorch/Module 03/: 3 1_stochastic_gradient_descent_v3.ipynb  3 3_PyTorchway_v3.ipynb  3 6_training_and_validation_v3.ipynb
04. Introduction to Neural Networks and PyTorch/Module 04/: 4 1 multiple_linear_regression_prediction_v2.ipynb  4 2 multiple_linear_regression_training_v2.ipynb  4 3 multi-target_linear_regression.ipynb  4 4 training_multiple_output_linear_regression.ipynb
04. Introduction to Neural Networks and PyTorch/Module 05/: 5 1logistic_regression_prediction_v2.ipynb  5 2 2bad_inshilization_logistic_regression_with_mean_square_error_v2.ipynb  5 3_cross_entropy_logistic_regression_v2.ipynb
04. Introduction to Neural Networks and PyTorch/Module 06/: Final Project League of Legends Match Predictor.ipynb  Neural Network for Breast Cancer Classification.ipynb
05. Deep Learning with PyTorch/Module 02/: 5 4softmax_in_one_dimension_v2.ipynb  6 2lab_predicting _MNIST_using_Softmax_v2.ipynb
05. Deep Learning with PyTorch/Module 03/: 7 1_simple1hiddenlayer.ipynb  7 2multiple_neurons.ipynb  7 4one_layer_neural_network_MNIST.ipynb  7 5 1activationfuction_v2.ipynb  7 5 2mist1layer_v2.ipynb
05. Deep Learning with PyTorch/Module 04/: 8 1 1mist2layer_v2.ipynb  8 1 2mulitclassspiralrulu_v2.ipynb  8 2 1dropoutPredictin_v2.ipynb  8 2 2dropoutRegression_v2.ipynb  8 3 1 initializationsame.ipynb  8 3 2Xaviermist1layer_v2.ipynb  8 3 3 He_Initialization_v2.ipynb  8 4 1_MomentumwithPolynomialFunctions_v2.ipynb  8 4 2_NeuralNetworkswithMomentum_v2.ipynb  8 5 1BachNorm_v2.ipynb
05. Deep Learning with PyTorch/Module 05/: 9 1What_is_Convolution.ipynb  9 2Activation_max_pooling 1.ipynb  9 3Multiple Channel Convolution.ipynb  9 4 1ConvolutionalNeralNetworkSimple example.ipynb  9 4 2CNN_Small_Image.ipynb  9 4 3CNN_Small_Image_batch.ipynb
05. Deep Learning with PyTorch/Module 06/: Convolutional Neural Network for Anime Image Classification.ipynb  FashionMNISTProject.ipynb
(+77 files in other folders)
