[project]
name = "ibm-ai-engineering-professional"
version = "0.1.0"
description = ""
authors = [
    {name = "ngoc",email = "ngochust56@gmail.com"}
]
readme = "README.md"
package-mode = false

requires-python = "~=3.12.0"

dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "numpy (==2.0.2)",
    "torch (==2.3)",
    "torchvision (==0.18)",
    "nltk (>=3.9.1,<4.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "torchtext (==0.18)",
    "spacy (>=3.8.4,<4.0.0)",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz",
    "torchdata (==0.9)",
    "portalocker (>=3.1.1,<4.0.0)",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0.tar.gz",
    "seaborn (>=0.13.2,<0.14.0)",
    "pmdarima (>=2.0.4,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "levenshtein (>=0.27.1,<0.28.0)",
    "dash-core-components (>=2.0.0,<3.0.0)",
    "dash-table (>=5.0.0,<6.0.0)",
    "dash (>=2.18.2,<3.0.0)",
    "dash-html-components (>=2.0.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"