[project]
name = "ibm-ai-engineering-professional"
version = "0.1.0"
description = ""
authors = [
    {name = "ngoc",email = "ngochust56@gmail.com"}
]
readme = "README.md"
package-mode = false

requires-python = "~=3.12.0"

dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "numpy (==2.0.2)",
    "torch (==2.3)",
    "torchvision (==0.18)",
    "nltk (>=3.9.1,<4.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "torchtext (==0.18)",
    "spacy (>=3.8.4,<4.0.0)",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz",
    "torchdata (==0.9)",
    "portalocker (>=3.1.1,<4.0.0)",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0.tar.gz",
    "seaborn (>=0.13.2,<0.14.0)",
    "pmdarima (>=2.0.4,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "levenshtein (>=0.27.1,<0.28.0)",
    "dash-core-components (>=2.0.0,<3.0.0)",
    "dash-table (>=5.0.0,<6.0.0)",
    "dash (>=2.18.2,<3.0.0)",
    "dash-html-components (>=2.0.0,<3.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)",
    "datasets (>=3.4.1,<4.0.0)",
    "accelerate (>=1.5.2,<2.0.0)",
    "torchmetrics (>=1.7.0,<2.0.0)",
    "trl (>=0.16.0,<0.17.0)",
    "bitsandbytes (>=0.45.3,<0.46.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "peft (>=0.15.0,<0.16.0)",
    "huggingface-hub (>=0.29.3,<0.30.0)",
    "sacrebleu (>=2.5.1,<3.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "wget (>=3.2,<4.0)",
    "sacremoses (>=0.1.1,<0.2.0)",
    "ibm-watsonx-ai (>=1.3.3,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-ibm (>=0.3.10,<0.4.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "chromadb (>=1.0.0,<2.0.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "docx2txt (>=0.9,<0.10)",
    "markdown (>=3.7,<4.0)",
    "unstructured (>=0.17.2,<0.18.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "jq (>=1.8.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"